kai-web-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kai-web-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kai-web
  ports:
    - name: tcp
      port: 80
      targetPort: 80
